# ben-lite

./: .gitignore  Leading_for_3NT.ipynb  Leading_for_3NT_Colab.ipynb  README.md  ben_with_redeal.py  pyproject.toml
install/: calculate_DDOLAR.spec
src/ben/: binary.py  bots.py  sample.py  scoring.py  util.py
src/ben/ben.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ben/nn/: models.py
