[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jupyter",
    "scikit-learn",
    #pandas",
    "tqdm",
    "websockets",
    "tensorflow",
    "grpcio-tools",

    "bottle",
    "gevent",
    "pythonnet",
]

description = "ben"
name = "ben"
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "isort == 5.11.4",
    "black == 22.12.0",
    "mypy>=1.4.1",
    "flake8 == 6.0.0",
    "flake8-bugbear == 22.12.6",
    "flake8-comprehensions == 3.10.1",
    "pep8-naming == 0.13.3",
    "pyproject-flake8 == 6.0.0.post1",
]


[tool.mypy]
disable_error_code = "misc"
exclude = ["tests"]
follow_imports = "skip"
strict = true

[tool.flake8]
exclude = "venv,.nox,docs"
extend-ignore = ["E24", "W504"]
extend-immutable-calls = ["Argument"]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
force_sort_within_sections = true
line_length = 120
profile = "black"
skip_gitignore = true
src_paths = ["src"]

[tool.setuptools.dynamic]
version = { attr = "ben.__version__" }

[tool.setuptools_scm]
